upgrade dependencies, various tweaks